--- a/SFAdvDev2022/ResourcePackages/Bootstrap4/MVC/Views/Layouts/default.cshtml
+++ b/SFAdvDev2022/ResourcePackages/Bootstrap4/MVC/Views/Layouts/default.cshtml
@@ -13,6 +13,7 @@
 
     @Html.Section("head")
     @Html.StyleSheet(Url.WidgetContent("~/ResourcePackages/Bootstrap4/assets/dist/css/main.min.css"), "head", true)
+    <link href="/aspnet-mvc/content/shared/styles/demopage.min.css?v=2022.1.120" rel="stylesheet" />
 </head>
 
 <body>
