--- a/SFAdvDev2022/Mvc/Views/NewsCrud/Index.cshtml
+++ b/SFAdvDev2022/Mvc/Views/NewsCrud/Index.cshtml
@@ -4,22 +4,12 @@
 </auto-generated>
 ------------------------------------------------------------------------------ *@
 
-@model SFAdvDev2022.Mvc.Models.NickModel
+@model SFAdvDev2022.Mvc.Models.NewsCrudModel
 <div>
-	@Model.Message
-</div>
-<div>
-    @Model.Enum
-</div>
-<div>
-    @Model.Flag
-</div>
-<div>
-    @Model.MyDate
-</div>
-<div>
-    @Model.Number
-</div>
-<div>
-    <img src="@Model.Images" />
+    @foreach (var newsiteminfo in Model.NewsItemsInfo)
+    {
+        <div>
+            <h2>@Html.Raw(newsiteminfo.NewsTitle)</h2>
+        </div>
+    }
 </div>
